--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,7 @@
   width: 100vw;
   position: fixed;
   bottom: 0;
-  height: 10vh;
+  height: 115px;
   z-index: 1;
 }
 
@@ -43,5 +43,13 @@
 
 .bottomMenu input[type="range"] {
   background-color: lime;
+  width: 100%;
+}
+
+.countDown {
+  margin: 0;
+}
+
+.progress {
   width: 100%;
 }
